# Internship-Task

./: .env.example  README.MD  assignment-answers.md  pyproject.toml
app/: README.MD  main.py
app/ai/: document_extraction.py  matching.py  prompts.py  resolution.py  test.py  validation.py
app/audit/: audit_validation_trail.py  document_extraction_trail.py  matching_trail.py  resolution_trail.py
app/core/: config.py
app/llm/: builder.py
app/matching/: primary.py  secondary.py  tertiary.py
app/models/: document_extraction_model.py  graph.py  invoice_extraction_model.py  matching_model.py  resolution_model.py  test.py  validation_model.py
app/models/discrepancies_models/: BaseDiscrepancy.py  DocumentIntelligenceDiscrepancies.py  MatchingDiscrepancies.py  ValidationDiscrepanices.py
app/pdf_data_extraction/: extract.py  helper.py
app/utils/: db.py  db_helpers.py  helpers.py
app/validation/: validator.py
app/workflow/: graph.py
output/: Invoice_1_Baseline.json  Invoice_2_Scanned.json  Invoice_3_Different_Format.json  Invoice_4_Price_Trap.json  Invoice_5_Missing_PO.json
